--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -1,5 +1,6 @@
 <div [formGroup]="form" class="form-group-wrapper">
   <input
+    #input
     [formControlName]="field.fieldKey"
     [class.invalid]="enableValidCSS && (control.touched && control.invalid) ||
     (control.touched && form?.errors)"
