--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,55 @@
-<p>product works!</p>
+<section class="products-section">
+  <div class="wrapper-l">
+    <div class="banner">
+      <div class="banner-text">
+        <h3>We're here with you!</h3>
+
+        <p>During this harsh times, online shopping has never been easier. We're giving you elegible products off sales taxes through July - August</p>
+
+        <button routerLink="/" type="button">Learn more</button>
+      </div>
+    </div>
+
+    <ul class="products">
+      <li *ngFor="let product of products">
+        <a *ngIf="product.images" 
+          [routerLink]="['/product', product.productId]"
+          class="product-image">
+          <img 
+            image-loader 
+            [src]="product.images[0]" 
+            [alt]="product.productName">
+        </a>
+  
+        <div class="product-info">
+          <a [routerLink]="['/product', product.productId]" 
+            class="product-name" [title]="product.productName">
+            {{ product.productName | textClip:75 }}
+          </a>
+  
+          <div>
+            <p class="price">{{ product.price | currency }}</p>
+            <p class="stock-label">
+              {{ product.totalStock > 0 ? 'In stock' : 'Not in stock' }}
+            </p>
+
+            <star-rating [productId]="product.productId"></star-rating>
+          </div>
+        </div>
+
+        <div class="action-buttons">
+          <button 
+            (click)="onBuyNow(product.productId)"
+            type="button" class="buy-now-btn">Buy Now</button>
+
+          <button 
+            (click)="onAddToCart(product.productId)"
+            type="button" class="add-to-cart-btn" title="Add to Cart">
+            <i class="material-icons">favorite_border</i>
+          </button>
+        </div>
+      </li>
+    </ul>
+
+  </div>
+</section>
