--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,6 @@
+<app-cart></app-cart>
+<app-product-ratings></app-product-ratings>
+
 <section class="products-section">
   <div class="wrapper-l">
     <div class="banner">
