--- a/src/app/product/cart/cart.component.html
+++ b/src/app/product/cart/cart.component.html
@@ -20,7 +20,9 @@
           </div>
 
           <div class="product-info">
-            <a [routerLink]="['/product', item.productId]" target="_blank" class="product-name">
+            <a 
+              [routerLink]="['/product/product-details/', item.productId]" 
+              target="_blank" class="product-name">
               {{ item.productName | textClip:80 }}
             </a>  
     
