--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -11,7 +11,7 @@
       </div>
       
       <div class="product-info">
-        <a [routerLink]="['/product', product.productId]" 
+        <a [routerLink]="['/product/product-details/', product.productId]" 
           class="product-name" [title]="product.productName">
           {{ product.productName }}
         </a>
