--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,8 @@
-<h1>Landing page</h1>
+<section class="landing-section">
+  <div class="wrapper-l">
+
+    <h1>Armazon 2</h1>
+
+    <a routerLink="/product">Visit products</a>
+  </div>
+</section>
