--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,5 @@
   <router-outlet></router-outlet>
   <app-footer *ngIf="!hideFooter"></app-footer>
 </main>
+<!-- <app-cart></app-cart>
+<app-product-ratings></app-product-ratings> -->
