--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -26,17 +26,16 @@
       gap: 0.5rem;
       user-select: none;
 
-      .option-icon {
-        opacity: 0.5;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      .option-icon {        
+        display: block;
         min-width: 80px;
         height: 36px;
         margin-bottom: 0.5rem;
-        padding: 0.2rem 0.7rem;
+        padding: 0 1rem;
+        font-size: .75rem;
+        font-weight: bold;
         white-space: nowrap;
+        text-align: center !important;
         text-overflow: ellipsis;
         border: 1px solid #e6e9f0;
         border-radius: 4px;
@@ -46,36 +45,35 @@
         cursor: pointer;
         overflow: hidden;        
 
-        &.active {
-          opacity: 1;
-        }
-
-        &:not(.active)::after {
-          content: '';
-          opacity: 0;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(204, 207, 216, 0.5); 
-          transition: opacity .4s ease;
-        }
-
-        &:hover::after {
-          opacity: 1;
-        }
-
-        span {    
-          font-size: .75rem;
-          font-weight: bold;
-        }
-
         &-l {
           @extend .option-icon;
+          opacity: 0.5;
+          position: relative;   
+          display: flex;
+          justify-content: center;
           height: auto;
           padding: 1rem 0;
           border: none;
+
+          &.active {
+            opacity: 1;
+          }
+  
+          &:not(.active)::after {
+            content: '';
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(204, 207, 216, 0.5); 
+            transition: opacity .4s ease;
+          }
+  
+          &:hover::after {
+            opacity: 1;
+          }
 
           img {
             width: 70px;
