--- a/src/app/product/product-ratings/review-section/review-section.component.scss
+++ b/src/app/product/product-ratings/review-section/review-section.component.scss
@@ -36,8 +36,11 @@
     .content {
       .rating-headline {
         display: flex;
-        align-items: center;
         margin-bottom: 0.5rem;
+
+        star-rating {
+          padding-top: 0.3rem;
+        }
 
         .headline {
           margin-left: 0.5rem;          
