--- a/src/app/product/product-ratings/rating-graph/rating-graph.component.scss
+++ b/src/app/product/product-ratings/rating-graph/rating-graph.component.scss
@@ -67,7 +67,8 @@
         height: 100%;
         border-radius: 1rem;
         transition: width .4s ease;
-        background-color: #4c4e5a;
+        background-color: #2587f7;
+        // background-color: #fdc151;
         animation: fillIn 0.7s ease;
       }
     }
