--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="wrapper">
+  <div class="wrapper-l">
     <nav class="navbar">
       <a routerLink="./product-list" 
         routerLinkActive="active-link" 
