--- a/src/app/admin-page/product-list/product-list.component.scss
+++ b/src/app/admin-page/product-list/product-list.component.scss
@@ -1,6 +1,6 @@
 .product-list-section {
   width: 100%;
-  min-height: 400px;
+  min-height: 100vh;
   padding: 2.5rem;
   background-color: #fff;
 
