--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     </a>
     
     <div class="user-options">
-      <button class="search-btn nav-btn" type="button">
+      <button routerLink="/product" class="search-btn nav-btn" type="button">
         <i class="material-icons">search</i>
       </button>
 
