--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -1,3 +1,9 @@
+@keyframes gradientWave {
+  0%{background-position:0% 44%}
+  50%{background-position:100% 57%}
+  100%{background-position:0% 44%}
+}
+
 .container {
   position: relative;
   display: flex;
@@ -45,14 +51,14 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: 
+    background: 
     linear-gradient(
-      60deg, 
-      rgba(0, 0, 0, 0.6),
-      rgba(247, 37, 83, 0.4), 
-      rgba(46, 175, 184, 0.3),
-      rgba(0, 0, 0, 0.6)
+      10deg, 
+      rgba(247, 37, 83, 0.5), 
+      rgba(65, 105, 225, 0.5),
     );
+    background-size: 600% 600%;
+    animation: gradientWave 5s ease infinite;
     z-index: 1;
   }
 
