--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,5 +3,18 @@
 
     <h1>Armazon 2</h1>
 
+
+    <div class="skeleton-container">
+      <div class="empty-content">
+        <div class="top">
+          <div class="circle"></div>
+          
+          <div class="left">
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
