--- a/src/app/product/cart/cart.component.html
+++ b/src/app/product/cart/cart.component.html
@@ -1,7 +1,9 @@
 <aside-panel
   [showPanel]="viewCart"
   (showPanel)="onClose()">
-  <app-spinner [loading]="isLoading"></app-spinner>
+  <!-- <app-spinner [loading]="isLoading"></app-spinner> -->
+
+  <item-loader></item-loader>
 
   <div class="cart">
     <div 
