--- a/src/app/shared/item-loader/item-loader.component.scss
+++ b/src/app/shared/item-loader/item-loader.component.scss
@@ -2,66 +2,74 @@
   to { transform: translateX(calc(500px + 100%)); }
 }
 
-.skeleton-container {
-  position: relative;
-  width: 500px;
-  height: 180px;
-  margin: 5rem auto;
-  border-radius: 6px;
-  background-color: #fff;
-  overflow: hidden;
+.loader-wrapper {
+  padding: 87.19px 3rem 1rem;
 
-  .empty-content {
-    position: relative;
-    width: inherit;
-    height: inherit;
-    padding: 2rem;
-    z-index: 1;
-
-    &::before {
-      content: '';
-      position: absolute;
-      transform: translateX(-100%);
-      left: 0;
-      top: 0;
-      width: 300px;
-      height: 100%;
-      background: linear-gradient(
-        90deg, 
-        transparent, 
-        rgba(222, 224, 231, 0.5), 
-        transparent
-      );
-      animation: move .6s linear infinite;
+  .skeleton-container {
+    width: 100%;
+    // height: 100px;
+    // background-color: royalblue;
+    padding: 1.5rem 0;
+    overflow: hidden;
+  
+    &:not(:last-of-type) {
+      border-bottom: thin solid #e7edff;
     }
+  
+    .empty-content-wrapper {
+      width: inherit;
+      height: inherit;
+  
+      .content {
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: inherit;
+        z-index: 2;
 
-    .top {
-      display: flex;
-      width: 100%;
-
-      .circle {
-        flex-shrink: 0;
-        width: 60px;
-        height: 60px;
-        margin-right: 1rem;
-        border-radius: 100px;
-        background-color: #dee0e7;
-      }
-
-      .left {
-        flex: 1;
-
-        .bar {
-          height: 10px;
-          margin-bottom: 0.7rem;
-          border-radius: 15px;
-          background-color: #dee0e7;
-
-          &:first-of-type {
-            height: 12px;
-          }
+        &::before {
+          content: '';
+          position: absolute;
+          transform: translateX(-100%);
+          left: 0;
+          top: 0;
+          width: 400px;
+          height: 100%;
+          background: linear-gradient(
+            90deg, 
+            transparent, 
+            rgba(255, 255, 255, 0.6), 
+            transparent
+          );
+          animation: move .7s linear infinite;
         }
-      }      
+  
+        .square {
+          flex-shrink: 0;
+          width: 80px;
+          height: 80px;
+          margin-right: 1rem;
+          background-color: #e2e4ec;
+        }
+  
+        .left {
+          flex: 1;
+  
+          .bar {
+            width: 35%;
+            height: 10px;
+            margin-bottom: 0.5rem;
+            background-color: #e2e4ec;
+
+            &:first-of-type {
+              width: 100%;
+              height: 18px;
+              margin-bottom: 1rem;
+            }
+
+          }
+        }      
+      }
     }
   }
 }
