--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -7,8 +7,8 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(246, 247, 250, 0.5);
-  animation: reveal 0.4s ease;
+  background-color: rgba(255, 255, 255, 0.5);
+  animation: reveal .4s ease;
   z-index: 10;
 
   &.fixed {
@@ -18,14 +18,14 @@
 
   .spinner {
     position: relative;
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     animation: rotate 0.6s linear infinite;
 
     .inner-ring {
       width: inherit;
       height: inherit;
-      border: 4px solid #e6e9f0;
+      border: 3px solid #e6e9f0;
       border-radius: 60px;
     }
 
@@ -35,7 +35,7 @@
       top: 0;
       width: inherit;
       height: inherit;
-      border: 4px solid transparent;
+      border: 3px solid transparent;
       border-color: transparent lighten(#F72551, 10) lighten(#F72551, 10);
       border-radius: 60px;
     }   
