--- a/src/app/product/cart/cart.component.html
+++ b/src/app/product/cart/cart.component.html
@@ -1,7 +1,4 @@
-<aside-panel
-  [showPanel]="viewCart"
-  (showPanel)="onClose()">
-
+<aside-panel [showPanel]="viewCart" (showPanel)="onClose()">
   <item-loader [isLoading]="isLoading"></item-loader>
 
   <div class="cart">
