--- a/src/app/shared/item-loader/item-loader.component.scss
+++ b/src/app/shared/item-loader/item-loader.component.scss
@@ -3,12 +3,10 @@
 }
 
 .loader-wrapper {
-  padding: 87.19px 3rem 1rem;
+  padding: 87.19px 3rem 0;
 
   .skeleton-container {
     width: 100%;
-    // height: 100px;
-    // background-color: royalblue;
     padding: 1.5rem 0;
     overflow: hidden;
   
@@ -17,39 +15,37 @@
     }
   
     .empty-content-wrapper {
+      position: relative;
       width: inherit;
       height: inherit;
+
+      &::after {
+        content: '';
+        position: absolute;
+        transform: translateX(-100%);
+        left: 0;
+        top: 0;
+        width: 400px;
+        height: 100%;
+        background: linear-gradient(
+          90deg, 
+          transparent, 
+          rgba(255, 255, 255, 0.6), 
+          transparent
+        );
+        animation: move .6s linear infinite;
+      }
   
       .content {
-        position: relative;
         display: flex;
         width: 100%;
-        height: inherit;
-        z-index: 2;
-
-        &::before {
-          content: '';
-          position: absolute;
-          transform: translateX(-100%);
-          left: 0;
-          top: 0;
-          width: 400px;
-          height: 100%;
-          background: linear-gradient(
-            90deg, 
-            transparent, 
-            rgba(255, 255, 255, 0.6), 
-            transparent
-          );
-          animation: move .7s linear infinite;
-        }
   
         .square {
           flex-shrink: 0;
           width: 80px;
           height: 80px;
           margin-right: 1rem;
-          background-color: #e2e4ec;
+          background-color: #e9ebf1;
         }
   
         .left {
@@ -59,14 +55,13 @@
             width: 35%;
             height: 10px;
             margin-bottom: 0.5rem;
-            background-color: #e2e4ec;
+            background-color: #e9ebf1;
 
             &:first-of-type {
               width: 100%;
               height: 18px;
               margin-bottom: 1rem;
             }
-
           }
         }      
       }
