--- a/src/app/shared/item-loader/item-loader.component.scss
+++ b/src/app/shared/item-loader/item-loader.component.scss
@@ -3,6 +3,11 @@
 }
 
 .loader-wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   padding: 87.19px 3rem 0;
 
   .skeleton-container {
