--- a/src/app/product/cart/cart.component.scss
+++ b/src/app/product/cart/cart.component.scss
@@ -5,15 +5,22 @@
   width: 100%;
   height: 100%;
 
-  .empty-cart-msg {
+  .empty-cart-msg,
+  .not-loggedin-msg {
     margin: 15rem auto;
     user-select: none;
     
     h3 {
-      font-size: 1rem;
-      font-weight: 500;
+      font-size: .9rem;
+      font-weight: 400;
+      text-align: center;
+    }
+
+    .btn-xl-filled {
+      margin: 2rem auto;
     }
   }
+
 
   .content {
     width: 100%;
