--- a/src/app/shared/item-loader/item-loader.component.scss
+++ b/src/app/shared/item-loader/item-loader.component.scss
@@ -9,6 +9,8 @@
   width: 100%;
   height: 100%;
   padding: 87.19px 3rem 0;
+  background-color: #fff;
+  z-index: 10;
 
   .skeleton-container {
     width: 100%;
