--- a/src/app/product/cart/cart.component.html
+++ b/src/app/product/cart/cart.component.html
@@ -6,7 +6,7 @@
       *ngIf="!isLoggedin" 
       class="not-loggedin-msg">
       <h3>Please log into your account</h3>
-      <a href="/user/login" class="btn-xl-filled">Login</a>
+      <a href="/user/login" class="btn-xl">Login</a>
     </div>
 
     <div 
