--- a/src/app/product/product-ratings/review-section/review-section.component.scss
+++ b/src/app/product/product-ratings/review-section/review-section.component.scss
@@ -19,10 +19,12 @@
         width: 35px;
         height: 35px;
         margin-right: 0.7rem;
-        border-radius: 60px;        
+        border-radius: 35px;        
         overflow: hidden;
   
         img {
+          width: 100%;
+          height: 100%;
           object-fit: cover;
           object-position: center center;
         }
