--- a/src/app/product/cart/cart.component.html
+++ b/src/app/product/cart/cart.component.html
@@ -27,7 +27,7 @@
 
           <div class="product-info">
             <a 
-              [routerLink]="['/product/product-details/', item.productId]" 
+              [routerLink]="['/product/details/', item.productId]" 
               target="_blank" class="product-name">
               {{ item.productName | textClip:80 }}
             </a>  
