--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -57,6 +57,7 @@
 
           &.active {
             opacity: 1;
+            pointer-events: none;
           }
   
           &:not(.active)::after {
