--- a/src/app/shared/aside-panel/aside-panel.component.html
+++ b/src/app/shared/aside-panel/aside-panel.component.html
@@ -1,10 +1,9 @@
 <div 
-  #overlay
   (click)="onClickOutside($event)" 
-  *ngIf="showPanel" 
+  [class]="{'show': showPanel, 'hide': !showPanel}"
   class="overlay">
 
-  <aside #panel class="panel">
+  <aside [class.slide-out]="!showPanel" class="panel">
     <div class="top">
       <button 
         (click)="onClose()"
