--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,14 +95,8 @@ img {
   animation: reveal 0.4s ease forwards;
   z-index: 1000;
 
-  &.show {
-    pointer-events: all;
-    animation: reveal 0.4s ease forwards;
-  }
-
   &.hide {
-    pointer-events: none;
-    animation: hide .3s ease forwards;
+    animation: hide 0.4s ease forwards;
   }
 }
 
