--- a/src/app/shared/dynamic-form/dynamic-form.component.scss
+++ b/src/app/shared/dynamic-form/dynamic-form.component.scss
@@ -68,6 +68,7 @@
       left: 0;
       top: calc(100% - 0.9rem - 1px - 0.5rem);
       width: 100%;
+      padding-bottom: 0.1rem;
       color: rgba(76, 78, 90, 0.8);
       font-size: 0.9rem;
       white-space: nowrap;
