--- a/src/app/shared/dynamic-form/input-feedback/input-feedback.component.scss
+++ b/src/app/shared/dynamic-form/input-feedback/input-feedback.component.scss
@@ -3,17 +3,17 @@
   left: 0;
   display: block;
   width: 100%;
-  max-height: 33px;
-  padding-top: 0.2rem;
   animation: slideUp 0.2s ease;
-  overflow: hidden;
-
+  
   p {
-    display: flex;
+    width: 100%;
+    padding: 0.2rem 0;
     color: #ff2d2d;
     font-size: 0.8rem;
     line-height: 1rem;
+    white-space: nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
