--- a/src/app/shared/dynamic-form/textarea/textarea.component.html
+++ b/src/app/shared/dynamic-form/textarea/textarea.component.html
@@ -1,5 +1,10 @@
-<div [formGroup]="form" class="form-group-wrapper">
+<div 
+  [formGroup]="form" 
+  class="form-group-wrapper"
+  [class.focused]="isFocused || control.value">
   <textarea
+    (focus)="isFocused = true"
+    (blur)="isFocused = false"
     [formControlName]="field.fieldKey"
     [class]="inputClass"
     [class.expanded]="control.value"></textarea>
