--- a/src/app/shared/dynamic-form/dynamic-form.component.scss
+++ b/src/app/shared/dynamic-form/dynamic-form.component.scss
@@ -24,18 +24,38 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 1rem 0 0;
+    border-bottom: thin solid #c7cad8;
 
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      transform-origin: left;
+      transform: scaleX(0);
+      width: 100%;
+      height: 1px;
+      background-color: #2587f7;
+      transition: transform .4s ease;
+      z-index: 1;
+    }
+
+    &.focused {
+      &::after {
+        transform: scaleY(1);
+      }
+    }
 
     input, select, textarea {
       position: relative;
       width: 100%;
       height: 30px;
       padding: 0.25rem 0;
-      border-bottom: thin solid #c7cad8;
+      // border-bottom: thin solid #c7cad8;
       transition: background-color .4s ease,
       border-color .4s ease;
       z-index: 1;
-      
+
       &:focus {
         border-color: #F72551;
 
