--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -1,1 +1,6 @@
-<section class="search-area"></section>
+<div #overlay class="overlay">
+  <section class="search-area">
+    <h1>Searching ...</h1>
+  </section>
+
+</div>
