--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,11 +6,11 @@
     </a>
     
     <div class="user-options">
-      <button routerLink="/products" class="search-btn nav-btn" type="button">
+      <button (click)="showSearchbox = true" class="search-btn nav-btn" type="button">
         <i class="material-icons">search</i>
       </button>
 
-      <button routerLink="/user"  class="login-btn nav-btn" type="button">
+      <button routerLink="/user" class="login-btn nav-btn" type="button">
         <i class="material-icons">person</i>
       </button>
   
@@ -23,4 +23,6 @@
     </div>
   </div>
 </nav>
-<search-bar></search-bar>
+<search-bar
+  [showSearchbox]="showSearchbox"
+  (showSearchbox)="showSearchbox = $event"></search-bar>
