--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -4,7 +4,10 @@
   *ngIf="showSearchbox"
   class="overlay">
   <section class="search-area">
-    <h1>Searching ...</h1>
+    <div class="wrapper">
+
+      
+    </div>
   </section>
 
 </div>
