--- a/src/app/product/search-results/search.component.scss
+++ b/src/app/product/search-results/search.component.scss
@@ -4,7 +4,7 @@
   animation: reveal .4s ease;
   
   .banner {
-    background: url('../../../assets/img/banner-2.webp') center center/cover;
+    background: url('/assets/img/banner-2.webp') center center/cover;
   }
   
   .products {
