--- a/src/app/product/search-results/search.component.scss
+++ b/src/app/product/search-results/search.component.scss
@@ -1,3 +1,10 @@
+@keyframes slideUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .products-section {
   margin: 2rem 0;
   padding: 70px 1.5rem 0;
@@ -14,9 +21,11 @@
     width: 100%;
 
     li {
-      position: relative;
+      opacity: 0;
       display: flex;
       flex-direction: column;
+      position: relative;
+      transform: translateY(2rem);
       width: 100%;
       padding: 1.5rem;
       background-color: #fff;
