--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -4,9 +4,16 @@
   *ngIf="showSearchbox"
   class="overlay">
   <section class="search-area">
-    <div class="wrapper">
+    <div class="wrapper-l">
+      <div class="top-area">
+        
+        <button 
+          (click)="onClose()"
+          type="button" class="close-btn" title="Close">
+          <i class="material-icons">close</i>
+        </button>
+      </div>
 
-      
     </div>
   </section>
 
