--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -3,4 +3,28 @@
   min-height: 250px;
   background-color: #fff;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+
+  .top-area {
+    width: 100%;
+
+    .close-btn {
+      margin-left: auto;
+      padding: 0.6rem;
+      border-radius: 40px;
+      transition: background-color .4s ease;
+
+      .material-icons {
+        color: #7a8196;
+        font-size: 1.3rem;
+        transition: color .4s ease;
+      }
+
+      &:hover {
+        .material-icons {
+          color: darken(#7a8196, 15);
+        }
+        background-color: #e6e9f0;
+      }
+    }
+  }
 }
