--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -27,22 +27,27 @@
     z-index: 10;
 
     .close-btn {
+      flex-shrink: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin-left: auto;
-      padding: 0.6rem;
+      width: 35px;
+      height: 35px;
       border-radius: 40px;
       transition: background-color .4s ease;
-  
+
       .material-icons {
         color: #7a8196;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         transition: color .4s ease;
       }
-  
+
       &:hover {
         .material-icons {
-          color: darken(#7a8196, 15);
+          color: darken(#7a8196, 5);
         }
-        background-color: #e6e9f0;
+        background-color: #eef0f5;
       }
     }
   }
