--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -9,6 +9,10 @@
         <div 
           class="form-group"
           [class.focused]="isFocused || control.value">
+          <button class="srch-btn">
+            <i class="material-icons">search</i>
+          </button>
+
           <input 
             (focus)="isFocused = true"
             (blur)="isFocused = false"
@@ -24,9 +28,40 @@
         </button>
       </div>
 
-      <ul class="search-results">
-        
-      </ul>
+      <div class="bottom-content">
+        <div class="title">
+          <span>Your history</span>
+          <button class="clear-history-btn">
+            Clear
+          </button>
+        </div>
+        <!-- <ul class="search-results">
+          <li>
+            <a [routerLink]="['/products', 29]">
+              <img src="http://127.0.0.1/market-api/product-images/full/product_29/product_29-5f121c9cbe1ba9.72430253.jpg" alt="Product icon">
+              <span>
+                Mens Slouchy Long Oversized Beanie Knit Cap for Summer Winter - Bright Blue
+              </span>
+            </a>
+          </li>
+          <li>
+            <a [routerLink]="['/products', 46]">
+              <img src="http://127.0.0.1/market-api/product-images/full/product_46/product_46-5f123cc9886a21.76147139.jpg" alt="Product icon">
+              <span>
+                Mens Slouchy Long Oversized Beanie Knit Cap for Summer Winter - Claret & Grey
+              </span>
+            </a>
+          </li>
+          <li>
+            <a [routerLink]="['/products', 78]">
+              <img src="http://127.0.0.1/market-api/product-images/full/product_78/product_78-5f31c8b2ac76d2.45930135.jpg" alt="Product icon">
+              <span>
+                Mens Slouchy Beanie Hat Thin Baggy Summer Skull Cap
+              </span>
+            </a>
+          </li>
+        </ul> -->
+      </div>      
     </div>
   </section>
 
