--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -1,24 +1,54 @@
+@keyframes grow {
+  from {
+    height: 0;
+  }
+}
+
 .search-area {
   width: 100%;
-  min-height: 250px;
-  padding: 1.5rem;
+  height: 250px;
+  padding: 2rem 1.5rem;
   background-color: #fff;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+  // animation: grow .3s ease;
 
   .top-area {
     display: flex;
+    align-items: center;
     width: 100%;
 
+    button {
+      flex-shrink: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 35px;
+      height: 35px;
+      border-radius: 40px;
+      transition: background-color .4s ease;
+
+      .material-icons {
+        color: #7a8196;
+        font-size: 1.2rem;
+        transition: color .4s ease;
+      }
+
+      &:hover {
+        .material-icons {
+          color: darken(#7a8196, 5);
+        }
+        background-color: #eef0f5;
+      }
+    }
+
     .form-group {
+      flex: 1;
       position: relative;
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      flex: 1;
-      margin-top: 1.5rem;
+      align-items: center;
       margin-right: 3rem;
       border-bottom: thin solid #c7cad8;
-  
+
       &::after {
         content: '';
         position: absolute;
@@ -38,38 +68,67 @@
         }
       }
 
+      .srch-btn {
+        .material-icons {
+          color: initial;
+          font-size: 1.4rem;
+        }
+      }
+
       input {
         width: 100%;
-        padding: 1rem 0;
+        padding: 1rem 0.5rem;
+        color: initial;
 
         &::placeholder {
           color: rgba(76, 78, 90, 0.7);
         }
       }
     }
+  }
 
-    .close-btn {
-      flex-shrink: 0;
+  .bottom-content {
+    width: 100%;
+    user-select: none;
+
+    .title {
       display: flex;
-      justify-content: center;
       align-items: center;
-      margin-left: auto;
-      width: 35px;
-      height: 35px;
-      border-radius: 40px;
-      transition: background-color .4s ease;
+      padding: 2rem 0;
 
-      .material-icons {
-        color: #7a8196;
-        font-size: 1.2rem;
-        transition: color .4s ease;
+      .clear-history-btn {
+        margin-left: .85rem;
+        font-size: .75rem;
       }
+    }
 
-      &:hover {
-        .material-icons {
-          color: darken(#7a8196, 5);
+    .search-results {
+      width: 100%;
+  
+      li {
+        width: inherit;
+  
+        a {
+          display: flex;
+          align-items: center;
+          padding: 1rem 0;
+  
+          &:hover, &:focus {
+            background-color: #c7cad8;
+          }
+  
+          img {
+            width: 50px;
+            height: 50px;
+            margin-right: 1rem;
+            object-fit: contain;
+            object-position: center center;
+          }
+  
+          span {
+            font-weight: normal;
+          }
         }
-        background-color: #eef0f5;
       }
     }
   }
