--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -30,12 +30,12 @@
 
       <div class="bottom-content">
         <div class="title">
-          <span>Your history</span>
+          <p>Your history</p>
           <button class="clear-history-btn">
             Clear
           </button>
         </div>
-        <!-- <ul class="search-results">
+        <ul class="search-results">
           <li>
             <a [routerLink]="['/products', 29]">
               <img src="http://127.0.0.1/market-api/product-images/full/product_29/product_29-5f121c9cbe1ba9.72430253.jpg" alt="Product icon">
@@ -60,7 +60,7 @@
               </span>
             </a>
           </li>
-        </ul> -->
+        </ul>
       </div>      
     </div>
   </section>
