--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -6,7 +6,7 @@
 
 .search-area {
   width: 100%;
-  height: 250px;
+  height: auto;
   padding: 2rem 1.5rem;
   background-color: #fff;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
@@ -96,9 +96,13 @@
       align-items: center;
       padding: 2rem 0;
 
+      p, button {
+        font-size: .8rem;
+      }
+
       .clear-history-btn {
         margin-left: .85rem;
-        font-size: .75rem;
+        text-decoration: underline;
       }
     }
 
@@ -107,26 +111,36 @@
   
       li {
         width: inherit;
+
+        &:not(:last-child) {
+          margin-bottom: 1rem;
+        }
   
         a {
+          position: relative;
           display: flex;
           align-items: center;
           padding: 1rem 0;
+          border-radius: 4px;
+          overflow: hidden;
   
-          &:hover, &:focus {
-            background-color: #c7cad8;
+          &:hover {
+            &::after {
+              opacity: 1;
+            }
           }
   
           img {
-            width: 50px;
-            height: 50px;
-            margin-right: 1rem;
+            width: 60px;
+            height: 60px;
+            margin-right: 2rem;
             object-fit: contain;
             object-position: center center;
           }
   
           span {
-            font-weight: normal;
+            color: initial;
+            font-weight: 500;
           }
         }
       }
