--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -30,7 +30,7 @@
 
       <div class="bottom-content">
         <div class="title">
-          <p>Your history</p>
+          <p>Search history</p>
           <button class="clear-history-btn">
             Clear
           </button>
@@ -38,24 +38,27 @@
         <ul class="search-results">
           <li>
             <a [routerLink]="['/products', 29]">
-              <img src="http://127.0.0.1/market-api/product-images/full/product_29/product_29-5f121c9cbe1ba9.72430253.jpg" alt="Product icon">
-              <span>
+              <img 
+                src="http://127.0.0.1/market-api/product-images/full/product_29/product_29-5f121c9cbe1ba9.72430253.jpg"
+                alt="Product icon"
+                class="product-srch-icon">
+              <span class="product-srch-name">
                 Mens Slouchy Long Oversized Beanie Knit Cap for Summer Winter - Bright Blue
               </span>
             </a>
           </li>
           <li>
             <a [routerLink]="['/products', 46]">
-              <img src="http://127.0.0.1/market-api/product-images/full/product_46/product_46-5f123cc9886a21.76147139.jpg" alt="Product icon">
-              <span>
+              <img src="http://127.0.0.1/market-api/product-images/full/product_46/product_46-5f123cc9886a21.76147139.jpg" class="product-srch-icon">
+              <span class="product-srch-name">
                 Mens Slouchy Long Oversized Beanie Knit Cap for Summer Winter - Claret & Grey
               </span>
             </a>
           </li>
           <li>
             <a [routerLink]="['/products', 78]">
-              <img src="http://127.0.0.1/market-api/product-images/full/product_78/product_78-5f31c8b2ac76d2.45930135.jpg" alt="Product icon">
-              <span>
+              <img src="http://127.0.0.1/market-api/product-images/full/product_78/product_78-5f31c8b2ac76d2.45930135.jpg" class="product-srch-icon">
+              <span class="product-srch-name">
                 Mens Slouchy Beanie Hat Thin Baggy Summer Skull Cap
               </span>
             </a>
