--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -14,6 +14,7 @@
           </button>
 
           <input 
+            autoFocus="true"
             (focus)="isFocused = true"
             (blur)="isFocused = false"
             [formControl]="control"
