--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -36,7 +36,7 @@
             Clear
           </button>
         </div>
-        <ul class="search-results">
+        <!-- <ul class="search-results">
           <li>
             <a [routerLink]="['/products', 29]">
               <img 
@@ -64,7 +64,7 @@
               </span>
             </a>
           </li>
-        </ul>
+        </ul> -->
       </div>      
     </div>
   </section>
