--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -36,9 +36,9 @@
             Clear
           </button>
         </div>
-        <!-- <ul class="search-results">
+        <ul class="search-results">
           <li>
-            <a [routerLink]="['/products', 29]">
+            <a [routerLink]="['/products/', 29]">
               <img 
                 src="http://127.0.0.1/market-api/product-images/full/product_29/product_29-5f121c9cbe1ba9.72430253.jpg"
                 alt="Product icon"
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li>
-            <a [routerLink]="['/products', 46]">
+            <a [routerLink]="['/products/', 46]">
               <img src="http://127.0.0.1/market-api/product-images/full/product_46/product_46-5f123cc9886a21.76147139.jpg" class="product-srch-icon">
               <span class="product-srch-name">
                 Mens Slouchy Long Oversized Beanie Knit Cap for Summer Winter - Claret & Grey
@@ -57,14 +57,14 @@
             </a>
           </li>
           <li>
-            <a [routerLink]="['/products', 78]">
+            <a [routerLink]="['/products/', 78]">
               <img src="http://127.0.0.1/market-api/product-images/full/product_78/product_78-5f31c8b2ac76d2.45930135.jpg" class="product-srch-icon">
               <span class="product-srch-name">
                 Mens Slouchy Beanie Hat Thin Baggy Summer Skull Cap
               </span>
             </a>
           </li>
-        </ul> -->
+        </ul>
       </div>      
     </div>
   </section>
